refactor place
